--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: monospace;
+    font-size: medium;
+    background-color: #eee
+}
+
+h1,
+h2,
+h3 {
+    font-style: italic;
 }
