--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: monospace;
-    font-size: medium;
+    font-size: large;
     background-color: #eee
 }
 
@@ -8,6 +8,24 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+h6 {
     font-style: italic;
+}
+
+.title {
+    text-align: center;
+    border-bottom: 2px solid black;
+    width: 400px;
+    margin: 0px auto;
+}
+
+.recipe-list {
+    text-align: center;
+    list-style-type: none;
+    padding-right: 40px;
+}
+
+.spaghetti {
+    margin: 10px;
 }
